# Decision-Trees-over-FHE

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md
data/: cancer_test.csv  cancer_train.csv  cover_train_small.csv  default_data.csv  digits_test.csv  digits_train.csv  iris_test.csv  iris_train.csv  wine_test.csv  wine_train.csv
src/: data_types.h  decision_tree_node.h  enc_tree_node.h  fhe_client.cpp  fhe_client.h  main.cpp  soft_if.cpp  soft_if.h  tree_eval_server.cpp  tree_eval_server.h  tree_train_server.cpp  tree_train_server.h  utils.h
tests/: fhe_tests.cpp
tests/gini_test_utils/: gini_test_vector.txt  gini_testing.py
